integrating restlets 2.0 in

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="mmrc" default="compile" basedir=".">
+<project name="medcafe" default="compile" basedir=".">
 
     <target name="setProps" depends="init" description="sets the various properties - custom ones should be in build.props.">
         <property file="build.props" />
@@ -8,15 +8,15 @@
         <property name="build" value="build" description="location to build the files to " />
         <property name="jars" value="lib" description="location of necessary jar files" />
         <property name="doc" value="doc" description="location of javadocs" />
-        <property name="warfile" value="mmrc.war" description="name of war file to build" />
-        <property name="jarfile" value="mmrc.jar" description="name of jar file to build" />
+        <property name="warfile" value="medcafe.war" description="name of war file to build" />
+        <property name="jarfile" value="medcafe.jar" description="name of jar file to build" />
         <property name="config" value="config" description="location of WEB-INF " />
         <property name="html" value="html" description="location of other HTML pages"/>
     	<property name="perl" value="perl" description="location of Perl code"/>
         <property name="webxml" value="${config}/web.xml" description="name of file to use as web.xml" />
         <property name="build.compiler" value="modern" />
         <property name="appBase" value="tomcat/webapps" />
-        <property name="webApp" value="mmrc" description="name of webapp to deploy as" />
+        <property name="webApp" value="medcafe" description="name of webapp to deploy as" />
         <property name="testProps" value="${antfile.dir}/test.properties" />
         <property name="release" value="v0_00" />
         <!-- <echoproperties /> -->
@@ -38,7 +38,7 @@
             <include name="*/**" />
             <exclude name="**/test/**" />
         	<manifest>
-                <attribute name="Main-Class" value="firstSteps.mmrcMain" />
+                <attribute name="Main-Class" value="firstSteps.medcafeMain" />
                 <attribute name="Class-Path" value="${jarspath}" />
             </manifest>
         </jar>
@@ -46,18 +46,18 @@
     </target>
 
     <target name="release" depends="clean, zipSource, jar, zipJavadoc, clean">
-        <move file="${jarfile}" overwrite="true" tofile="mmrc_jar_${release}.jar" />
-        <!-- <move file="${warfile}" overwrite="true" tofile="mmrc_war_${release}.war" /> -->
+        <move file="${jarfile}" overwrite="true" tofile="medcafe_jar_${release}.jar" />
+        <!-- <move file="${warfile}" overwrite="true" tofile="medcafe_war_${release}.war" /> -->
     </target>
 
     <target name="zipSource" depends="setProps, clean">
-        <zip basedir="${antfile.dir}" compress="true" defaultexcludes="true" zipfile="mmrc_src_${release}.zip">
+        <zip basedir="${antfile.dir}" compress="true" defaultexcludes="true" zipfile="medcafe_src_${release}.zip">
             <exclude name="tomcat"/>
         </zip>
     </target>
 
     <target name="zipJavadoc" depends="doc">
-        <zip basedir="${doc}" compress="true" defaultexcludes="true" zipfile="mmrc_api_${release}.zip"></zip>
+        <zip basedir="${doc}" compress="true" defaultexcludes="true" zipfile="medcafe_api_${release}.zip"></zip>
     </target>
 
     <target name="init">
@@ -80,13 +80,13 @@
         <delete dir="${doc}" />
         <delete dir="${build}" />
         <delete>
-            <fileset dir="." includes="mmrc*.zip" />
+            <fileset dir="." includes="medcafe*.zip" />
         </delete>
         <delete>
-            <fileset dir="." includes="mmrc*.war" />
+            <fileset dir="." includes="medcafe*.war" />
         </delete>
         <delete>
-            <fileset dir="." includes="mmrc*.jar" />
+            <fileset dir="." includes="medcafe*.jar" />
         </delete>
         <delete>
             <fileset dir="." includes="*.aar" />
