--- a/config/web.xml
+++ b/config/web.xml
@@ -5,6 +5,29 @@
     version="2.5">
     <display-name>mmrc</display-name>
 
+    <!-- Restlet configuration -->
+    <context-param>
+       <param-name>org.restlet.application</param-name>
+       <param-value>
+          org.mitre.medcafe.restlet.MedcafeApplication
+       </param-value>
+    </context-param>
+
+    <!-- Restlet adapter -->
+    <servlet>
+       <servlet-name>RestletServlet</servlet-name>
+       <servlet-class>
+          org.restlet.ext.servlet.ServerServlet
+       </servlet-class>
+    </servlet>
+
+    <!-- Catch all requests -->
+    <servlet-mapping>
+       <servlet-name>RestletServlet</servlet-name>
+       <url-pattern>/c/*</url-pattern>
+    </servlet-mapping>
+
+
     <!-- Login by form -->
     <login-config>
         <auth-method>FORM</auth-method>
