--- a/config/formats.props
+++ b/config/formats.props
@@ -4,7 +4,7 @@
 # formatting strings use <:field:> notation to show where to put JSON instance values.  Field names are .trim()'d before calling for the values in the JSON object
 #   arrays are automatically detected and one line will be produced for each member in the array
 
-/repositories/[^/]+/patients/[^/]+/images = <cover><img><![CDATA[<:images.source:>]]></img><desc><![CDATA[<:images.name:>]]></desc></cover>
+/repositories/[^/]+/patients/[^/]+/images = <cover><img><![CDATA[<:images.source:>]]></img><desc><![CDATA[<:images.name:>]]></desc><param><![CDATA[<:images.param:>]]></param></cover>
 #/repositories/[^/]+/patients/[^/]+/images = <img src="<:images.source:>" width="160"></img>
 /repositories/[^/]+/patients/.+ = Not done yet
 /repositories/[^/]+/patients = <li id="treeme"><span class="folder"><:patients.id:></span></li>\n
