added velocity2js to allow browser-side templating

--- a/build.xml
+++ b/build.xml
@@ -150,4 +150,16 @@
             </batchtest>
         </junit>
     </target>
+
+    <taskdef name="vel2js" classname="at.riemers.velocity2js.velocity.Velocity2JsTask" classpath="lib/velocity2js/Velocity2Js.jar;lib/velocity2js/velocity-1.5.jar;lib/velocity2js/commons-collections-3.1.jar;lib/velocity2js/commons-lang-2.1.jar; lib/velocity2js/commons-logging.jar; lib/velocity2js/commons-logging.jar; lib/velocity2js/velocity-1.5/log4j-1.2.12.jar;"/>
+
+    <target name="vel2js" depends="" description="Regenerates all templates">
+        <vel2js templateDir="templates" javascriptDir="html/js">
+                   <!-- [javascriptName="<javascript-file>"] -->
+                   <!-- [resource="<resource-file>"] > -->
+                <fileset dir="templates" casesensitive="yes">
+                    <include name="**/*.vm"/>
+                </fileset>
+        </vel2js>
+    </target>
 </project>
