Spot check in development.  About to try to start using auto-generated files.  Lord help me.

--- a/config/web.xml
+++ b/config/web.xml
@@ -31,7 +31,8 @@
        <servlet-class>
           org.restlet.ext.servlet.ServerServlet
        </servlet-class>
-    </servlet>
+        <load-on-startup>10</load-on-startup>
+   </servlet>
     <!-- Init Servlet -->
     <servlet>
         <servlet-name>InitServlet</servlet-name>
