--- a/config/web.xml
+++ b/config/web.xml
@@ -131,6 +131,7 @@
 
     <!-- Handling stuff -->
     <welcome-file-list>
+        <welcome-file>introPage.jsp</welcome-file>
         <welcome-file>index.jsp</welcome-file>
         <welcome-file>index.htm</welcome-file>
     </welcome-file-list>
