--- a/config/web.xml
+++ b/config/web.xml
@@ -55,6 +55,9 @@
        <url-pattern>/c/*</url-pattern>
     </servlet-mapping>
 
+    <session-config>
+        <session-timeout>180</session-timeout>
+    </session-config>
 
     <!-- Login by form -->
     <login-config>
