--- a/website/build.xml
+++ b/website/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="ROOT" default="compile" basedir=".">
+<project name="ROOT" default="war" basedir=".">
 
     <target name="setProps" depends="init" description="Sets the various properties - custom ones should be in build.props.">
         <property file="build.props" />
