--- a/mobileMeds/AndroidManifest.xml
+++ b/mobileMeds/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="org.mitre.android.tutorial"
       android:versionCode="1"
       android:versionName="1.0">
-      
+       <uses-sdk android:minSdkVersion="9" />
       <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
       
@@ -20,4 +20,4 @@
     </application>
 
 
-</manifest> 
+</manifest>
